--- a/es.lproj/Localizable.strings
+++ b/es.lproj/Localizable.strings
@@ -1,150 +1,217 @@
-"Algeria" = "Argelia";
-"AlwaysOpenInSafari" = "Abrir siempre en Safari";
-"AlwaysOpenInSafariDesc" = "Forzar la apertura de enlaces en Safari en lugar de abrirlos en el navegador interno de la aplicación.";
-"Anguilla" = "Anguila";
-"Apply" = "Aplicar";
-"ApplyDesc" = "Cerrar la aplicación para aplicar los cambios.";
-"AreYouSure" = "¿Estás seguro?";
-"Argentina" = "Argentina";
-"Australia" = "Australia";
-"Authenticate" = "Autenticar";
-"AutoPlayNextVideo" = "Reproducir automáticamente el siguiente video";
-"AutoPlayNextVideoDesc" = "Cambiar automáticamente al siguiente video después de que termine el video actual.";
-"BHTikTokSettings" = "Configuración de BHTikTok";
-"Belarus" = "Bielorrusia";
-"Brazil" = "Brasil";
-"Cache" = "Borrar caché";
-"Canada" = "Canadá";
-"Cancel" = "Cancelar";
-"Cleared" = "Completado\nBorrado %@";
-"ConfirmCommentDislike" = "Confirmar no me gusta en el comentario";
-"ConfirmCommentDislikeDesc" = "Confirmar antes de dar 'no me gusta' a un comentario.";
-"ConfirmCommentLike" = "Confirmar me gusta en el comentario";
-"ConfirmCommentLikeDesc" = "Confirmar antes de dar 'me gusta' a un comentario.";
-"ConfirmFollow" = "Confirmar seguir";
-"ConfirmFollowDesc" = "Confirmar antes de seguir a un usuario.";
-"ConfirmLike" = "Confirmar me gusta";
-"ConfirmLikeDesc" = "Confirmar antes de dar 'me gusta' a un video.";
-"Confirmation" = "Confirmación de configuración";
-"Copied" = "Copiado";
-"CopyBio" = "Copiar biografía";
-"CopyBioURL" = "Copiar enlace de biografía";
-"CopyDescription" = "Copiar descripción";
-"CopyMusicLink" = "Copiar enlace de música";
-"CopyMusicsLink" = "Copiar enlace de música";
-"CopyMusicsLinkDesc" = "Agregar un botón para copiar enlaces de música.";
-"CopyNickName" = "Copiar nombre de usuario";
-"CopyProfileInformation" = "Copiar información de perfil";
-"CopyProfileInformationDesc" = "Permitir copiar información de perfil al mantener presionada la foto de perfil o el nombre de usuario.";
-"CopySocialName" = "Copiar nombre de usuario social";
-"CopyVideoDescription" = "Copiar descripción del video";
-"CopyVideoDescriptionDesc" = "Agregar un botón para copiar la descripción de un video.";
-"CopyVideoLink" = "Copiar enlace de video";
-"CopyVideosLink" = "Copiar enlace de video";
-"CopyVideosLinkDesc" = "Agregar un botón para copiar enlaces de video.";
-"Country" = "Configuración de país/región";
-"Denmark" = "Dinamarca";
-"Developer" = "Desarrollador";
-"DoesntFollowsYou" = "No te sigue";
-"DonateViaPayPal" = "Donar a través de PayPal";
-"Done" = "Hecho";
-"DownloadAllPhotos" = "Descargar todas las fotos";
-"DownloadMusic" = "Descargar música";
-"DownloadMusics" = "Descargar música";
-"DownloadMusicsDesc" = "Agregar un botón para descargar música desde videos.";
-"DownloadThisPhoto" = "Descargar esta foto";
-"DownloadVideo" = "Descargar video";
-"DownloadVideos" = "Descargar videos";
-"DownloadVideosDesc" = "Agregar un botón para descargar videos sin marca de agua.";
-"Downloading" = "Descargando";
-"Egypt" = "Egipto";
-"EnableChangingRregion" = "Habilitar cambio de región";
-"EnableFakeOptions" = "Habilitar opciones falsas de seguimiento/Me gusta";
-"ExtendBio" = "Extender biografía";
-"ExtendBioDesc" = "Aumentar el límite de caracteres de la biografía a 222.";
-"ExtendComment" = "Extender límite de comentarios";
-"ExtendCommentDesc" = "Aumentar el límite de caracteres de los comentarios a 240.";
-"Fake" = "Funciones falsas";
-"FakeBlueMark" = "Falsificar marca de verificación";
-"FakeDesc" = "Dejar en blanco para mostrar el valor original, estos cambios solo serán visibles para ti.";
-"Feed" = "Opciones";
-"Finland" = "Finlandia";
-"FollowStatus" = "Estado de seguimiento";
-"FollowStatusDesc" = "Mostrar el estado de seguimiento en el perfil.";
-"FollowerCount" = "Seguidores";
-"FollowingCount" = "Siguiendo";
-"FollowingStartup" = "Inicio predeterminado en 'Siguiendo'";
-"FollowingStartupDesc" = "Establecer la página 'Siguiendo' como la página de inicio predeterminada.";
-"FollowsYou" = "Te sigue";
-"France" = "Francia";
-"Friends" = "Amigos";
-"Germany" = "Alemania";
-"HideUI" = "Modo pantalla completa";
-"HideUIDesc" = "Agregar un botón para ocultar/mostrar la interfaz.";
-"HongKong" = "Hong Kong";
-"IdentifyYourself" = "¡Autentíquese!";
-"Indonesia" = "Indonesia";
-"Italy" = "Italia";
-"Japan" = "Japón";
-"Kazakhstan" = "Kazajistán";
-"Kuwait" = "Kuwait";
-"Laos" = "Laos";
-"Lebanon" = "Líbano";
-"LikeCount" = "Me gusta";
-"Macao" = "Macao";
-"Malaysia" = "Malasia";
-"Mexico" = "México";
-"No" = "No";
-"NoAds" = "Desactivar anuncios";
-"NoAdsDesc" = "Eliminar los anuncios de la aplicación.";
-"NoFollows" = "No hay seguimientos";
-"NoJustWatched" = "Eliminar 'Acabo de ver'";
-"NoJustWatchedDesc" = "Eliminar el 'Acabo de ver' en las miniaturas de los videos.";
-"Norway" = "Noruega";
-"Other" = "Otro";
-"Padlock" = "Bloqueo con contraseña";
-"PadlockDesc" = "Requiere una contraseña para desbloquear la aplicación.";
-"Pakistan" = "Pakistán";
-"Panama" = "Panamá";
-"Philippines" = "Filipinas";
-"Profile" = "Configuración del perfil";
-"ProfileLikeCount" = "Me gusta en videos del perfil";
-"ProfileLikeCountDesc" = "Mostrar la cantidad de 'me gusta' en las miniaturas de videos en el perfil.";
-"RegionCode" = "Mostrar código de región/país en lugar de bandera";
-"Regions" = "Regiones";
-"Romania" = "Rumania";
-"Russia" = "Rusia";
-"SaudiArabia" = "Arabia Saudita";
-"SaveProfileImage" = "Guardar imagen de perfil";
-"SaveProfileImageDesc" = "Permitir la descarga de la imagen de perfil al mantenerla presionada.";
-"ShareSheet" = "Mostrar panel de compartir";
-"ShareSheetDesc" = "Mostrar el panel de compartir después de completar la descarga.";
-"ShowProgressBar" = "Mostrar barra de progreso";
-"ShowUsername" = "Mostrar nombre de usuario en lugar de apodo";
-"ShowUsernameDesc" = "Mostrar el nombre de usuario en lugar del apodo, como en versiones anteriores.";
-"Singapore" = "Singapur";
-"SkipLive" = "Omitir en vivo";
-"SouthKorea" = "Corea del Sur";
-"Success" = "Guardado exitosamente";
-"Sudan" = "Sudán";
-"Taiwan" = "Taiwán";
-"Telegram" = "Nuestro canal de Telegram";
-"Thailand" = "Tailandia";
-"TipJar" = "Donar para el desarrollo";
-"TransparentComms" = "Comentarios semitransparentes";
-"TransparentCommsDesc" = "Hacer el fondo de la ventana de comentarios semitransparente para poder leerlos mientras se ve un video.";
-"Turkey" = "Turquía";
-"Ukraine" = "Ucrania";
-"UnitedArabEmirates" = "Emiratos Árabes Unidos";
-"UnitedKingdom" = "Reino Unido";
-"UnitedStates" = "Estados Unidos";
-"UnsensitiveContent" = "Contenido no sensible";
-"UnsensitiveContentDesc" = "Eliminar la advertencia de contenido sensible.";
-"UploadDate" = "Fecha de subida del video";
-"UploadDateDesc" = "Mostrar la fecha de subida en las miniaturas de videos en el perfil.";
-"UploadRegion" = "Mostrar región/país de subida";
-"UploadRegionDesc" = "Mostrar la bandera de la región/país de subida del video junto al nombre de usuario.";
-"VidNoMusic" = "Video sin música";
-"Vietnam" = "Vietnam";
-"WhatToCopy" = "Seleccionar acción";
-"Yes" = "Sí";
+"ActionDislike"="No me gusta";
+"ActionFollow"="Seguir";
+"ActionLike"="Me gusta";
+"Albania"="Albania";
+"Algeria"="Argelia";
+"Anguilla"="Anguila";
+"Apply"="Aplicar";
+"Arabic"="Traducción en Árabe";
+"AreYouSure"="¿Estás seguro/a?";
+"Argentina"="Argentina";
+"Australia"="Australia";
+"Authenticate"="Autenticar";
+"Azerbaijan"="Azerbaiyán";
+"BHButtonPlacement"="Ubicación del botón de configuración";
+"BHTikTokSettings"="BHTikTok Plus";
+"Belarus"="Bielorrusia";
+"Brazil"="Brasil";
+"Cache"="Limpiar caché";
+"Canada"="Canadá";
+"Cancel"="Cancelar";
+"ChineseSimplified"="Traducción en Chino Simplificado";
+"ChineseTraditional"="Traducción en Chino Tradicional";
+"ClearLinks"="Limpiar enlaces";
+"ClearLinksDesc"="Elimina el seguimiento de los enlaces compartidos desde tu cuenta";
+"Cleared"="Hecho\nLimpiado %@";
+"ColorOptions"="Apariencia";
+"CommentColor"="Cambiar color de comentario";
+"CommentColorDesc"="Cambia los colores de los comentarios y descripciones de vídeos";
+"CompactMenu"="Compacto";
+"Confirm"="Confirmar";
+"ConfirmAction"="Confirmar acción";
+"ConfirmCommentDislike"="Confirmar no me gusta de comentario";
+"ConfirmCommentDislikeDesc"="Requiere confirmación antes de dar 'No me gusta' a un comentario";
+"ConfirmCommentLike"="Confirmar me gusta de comentario";
+"ConfirmCommentLikeDesc"="Requiere confirmación antes de dar 'Me gusta' a un comentario";
+"ConfirmFollow"="Confirmar seguir";
+"ConfirmFollowDesc"="Requiere confirmación antes de seguir a un usuario";
+"ConfirmLike"="Confirmar me gusta";
+"ConfirmLikeDesc"="Requiere confirmación antes de dar 'Me Gusta' a una publicación";
+"ConfirmationOptions"="Confirmación";
+"Copied"="Copiado";
+"CopyBio"="Copiar biografía";
+"CopyBioURL"="Copiar URL del perfil";
+"CopyDescription"="Copiar descripción";
+"CopyMusicLink"="Copiar enlace de música";
+"CopyMusicsLink"="Copiar enlace de música";
+"CopyMusicsLinkDesc"="Añade un botón para copiar enlaces de música";
+"CopyNickName"="Copiar nombre";
+"CopyProfileInformation"="Copiar información del perfil";
+"CopyProfileInformationDesc"="Permite copiar descripciones de perfil manteniendo presionada una foto o en el @nick";
+"CopySocialName"="Copiar @nick";
+"CopyVideoDescription"="Copiar descripción del vídeo";
+"CopyVideoDescriptionDesc"="Añade un botón para copiar descripciones de vídeo";
+"CopyVideoLink"="Copiar enlace del vídeo";
+"CopyVideosLink"="Copiar enlace del vídeo";
+"CopyVideosLinkDesc"="Añade un botón para copiar enlaces de vídeo";
+"CountryCode"="Código de país";
+"CountryFlag"="Bandera del país";
+"Croatia"="Croacia";
+"Denmark"="Dinamarca";
+"Developer"="Desarrollador de BHTikTok Plus";
+"DoesntFollowsYou"="Siguiendo";
+"Donate"="Apoyar el desarrollo";
+"DonateMessage"="Si te gusta BHTikTok Plus y quieres apoyarme, puedes comprarme un café utilizando cualquiera de las formas convenientes a continuación.\n\nGracias";
+"DonateViaPayPal"="Donar a través de PayPal";
+"Done"="Hecho";
+"DownloadAllPhotos"="Descargar todas las fotos";
+"DownloadFeedHeader"="Feed";
+"DownloadHDVideo"="Descargar vídeo en HD";
+"DownloadHDVideos"="Descargar vídeos en HD";
+"DownloadHDVideosDesc"="Añade la opción de descargar vídeos en HD (H.265). Nota: Este formato puede no ser compatible con algunas aplicaciones";
+"DownloadMenu"="Estilo del menú de descarga";
+"DownloadMusic"="Descargar música";
+"DownloadMusics"="Descargar música";
+"DownloadMusicsDesc"="Añade un botón para descargar música de los vídeos";
+"DownloadOptions"="Descargas";
+"DownloadProfileHeader"="Perfil";
+"DownloadThisPhoto"="Descargar esta foto";
+"DownloadVideo"="Descargar vídeo";
+"DownloadVideos"="Descargar vídeos";
+"DownloadVideosDesc"="Añade un botón para descargar vídeos sin marcas de agua";
+"DownloadedAction"="Acción después de descargar";
+"Downloading"="Descargando";
+"Egypt"="Egipto";
+"EnableChangingRegion"="Cambiar región";
+"EnableFakeOptions"="Suscripciones\/Likes falsos";
+"EnterNumber"="Ingresa un número";
+"ExtendBio"="Ampliar límite de la biografía";
+"ExtendBioDesc"="Aumenta el límite de caracteres para las descripciones de perfil a 222";
+"ExtendComment"="Ampliar límite de comentario";
+"ExtendCommentDesc"="Aumenta el límite de caracteres para los comentarios a 240";
+"FakeBlueMark"="Insignia de verificación falsa";
+"FakeDesc"="Deja los campos en blanco para mostrar los valores originales. Estos cambios solo son visibles para ti";
+"FakeOptions"="Opciones fake";
+"Feed"="Feed";
+"FeedOptions"="Opciones del feed";
+"Finland"="Finlandia";
+"FollowStatus"="Estado de seguir";
+"FollowStatusDesc"="Muestra el estado de suscripción en los perfiles de usuario";
+"FollowerCount"="Número de seguidores";
+"Following"="Siguiendo";
+"FollowingCount"="Número de seguidos";
+"FollowsYou"="Te sigue";
+"ForYou"="Para ti";
+"France"="Francia";
+"Friends"="Amigos";
+"Germany"="Alemania";
+"HideUI"="Ocultar interfaz";
+"HideUIDesc"="Añade un botón para ocultar\/mostrar los botones de la interfaz";
+"HongKong"="Hong Kong";
+"IdentifyYourself"="¡Identifícate!";
+"InNickname"="Sobrenombre";
+"InProfile"="En perfil";
+"InSettings"="En ajustes";
+"Indonesia"="Indonesia";
+"Italy"="Italia";
+"Japan"="Japón";
+"Kazakhstan"="Kazajistán";
+"Kuwait"="Kuwait";
+"Laos"="Laos";
+"Lebanon"="Líbano";
+"LikeCount"="Número de me gusta";
+"Macao"="Macao";
+"Malaysia"="Malasia";
+"MaybeLater"="Quizás más tarde";
+"Mexico"="México";
+"Moldova"="Moldavia";
+"Morocco"="Marruecos";
+"NicknameColor"="Cambiar color del @nick";
+"NicknameColorDesc"="Cambia el color de los @nicks en el feed";
+"NicknameColorGlobal"="Aplicar a todos los @nicks";
+"NicknameColorGlobalDesc"="Cambia el color de los @nicks en toda la aplicación. requiere habilitar la opción '%@'";
+"NicknameGlobalShadow"="Aplicar a todos los @nicks";
+"NicknameGlobalShadowDesc"="Aplica sombra a los @nicks en toda la aplicación. requiere habilitar la opción '%@'";
+"NicknameTextShadow"="Aplicar sombra al @nick";
+"NicknameTextShadowDesc"="Aplica sombra al @nick en el feed";
+"No"="No";
+"NoAds"="Desactivar anuncios";
+"NoAdsDesc"="Elimina los anuncios dentro de la aplicación";
+"NoFollows"="Sin seguir";
+"NoJustWatched"="Eliminar 'Recién visto'";
+"NoJustWatchedDesc"="Elimina la máscara de 'Recién visto' de las miniaturas de vídeo";
+"Norway"="Noruega";
+"OldMenu"="TikTok";
+"OtherOptions"="Otros";
+"Padlock"="Bloqueo con contraseña";
+"PadlockDesc"="Requiere una contraseña para desbloquear la aplicación";
+"Pakistan"="Pakistán";
+"Panama"="Panamá";
+"Philippines"="Filipinas";
+"PlaybackAction"="Acción después de completar la reproducción del vídeo";
+"PlusDeveloper"="Desarrollador de BHTikTok Plus";
+"ProfileLikeCount"="Número de me gusta en el vídeo";
+"ProfileLikeCountDesc"="Muestra el número de me gusta en las miniaturas de vídeo en los perfiles de usuario";
+"ProfileOptions"="Perfil";
+"ProfileTextShadow"="Aplicar sombra a las miniaturas";
+"ProfileTextShadowDesc"="Aplica sombra a las estadísticas en las miniaturas de vídeo en los perfiles";
+"RegionOptions"="Región";
+"RegionStyle"="Formato y ubicación de la región";
+"Regions"="Regiones";
+"Replay"="Repetir";
+"Romania"="Rumania";
+"Russia"="Rusia";
+"SaudiArabia"="Arabia Saudita";
+"SaveProfileImage"="Guardar fotos de perfil";
+"SaveProfileImageDesc"="Permite descargar fotos de perfil manteniendo presionada la imagen";
+"SaveToPhotos"="Guardar en fotos";
+"SelectColor"="Elegir color";
+"Senegal"="Senegal";
+"Settings"="Ajustes";
+"ShowProgressBar"="Mostrar barra de progreso";
+"ShowShareSheet"="Mostrar hoja de compartir";
+"ShowUsername"="Mostrar nombre de usuario";
+"ShowUsernameDesc"="Muestra el nombre en lugar del @nick, como en las versiones anteriores";
+"Singapore"="Singapur";
+"SkipLive"="Saltar transmisiones en vivo";
+"SkipRecs"="Saltar recomendaciones";
+"SkipToNext"="Saltar al siguiente";
+"SouthKorea"="Corea del Sur";
+"Spanish"="Traducción en Español";
+"StartupPage"="Página de inicio";
+"Stop"="Detener";
+"Success"="Guardado";
+"Sudan"="Sudán";
+"Switzerland"="Suiza";
+"Taiwan"="Taiwán";
+"Telegram"="Nuestro canal de Telegram";
+"Thailand"="Tailandia";
+"ThankYou"="Gracias";
+"Thanks"="Agradecimientos";
+"TipJar"="Bote de propinas";
+"TopRight"="Esquina superior derecha";
+"TotalVideoCount"="Publicaciones: %@";
+"TransparentComms"="Comentarios semitransparentes";
+"TransparentCommsDesc"="Hace que el fondo de la ventana de comentarios sea semitransparente, permitiéndote leer comentarios mientras ves vídeos";
+"Turkey"="Turquía";
+"Turkmenistan"="Turkmenistán";
+"Ukraine"="Ucrania";
+"UnitedArabEmirates"="Emiratos Árabes Unidos";
+"UnitedKingdom"="Reino Unido";
+"UnitedStates"="Estados Unidos";
+"UnsensitiveContent"="Contenido no sensible";
+"UnsensitiveContentDesc"="Elimina la advertencia de contenido sensible";
+"UploadDate"="Fecha de carga del vídeo";
+"UploadDateDesc"="Muestra la fecha de carga en las miniaturas de vídeo en los perfiles de usuario";
+"UploadHD"="Subir siempre en HD";
+"UploadHDDesc"="Carga vídeos en calidad HD de forma forzada";
+"UploadRegion"="Mostrar país de subida";
+"UploadRegionDesc"="Muestra la bandera del país de carga del vídeo junto al nombre de usuario";
+"Uzbekistan"="Uzbekistán";
+"VidNoMusic"="El vídeo no tiene música";
+"VideoCount"="Número de vídeos";
+"VideoCountDesc"="Muestra el número total de cargas en los perfiles de usuario";
+"Vietnam"="Vietnam";
+"WhatToCopy"="Seleccionar una acción";
+"Yemen"="Yemen";
+"Yes"="Sí";
